Fixing bottom scrollbar appearance on sidenav toggle.

--- a/front-end/bulletin/src/app/app.component.css
+++ b/front-end/bulletin/src/app/app.component.css
@@ -4,4 +4,5 @@
 
 .content-style {
   padding: 30px;
+  margin-left: 44px;
 }
