--- a/front-end/bulletin/src/app/global.css
+++ b/front-end/bulletin/src/app/global.css
@@ -1,3 +1,8 @@
+.news-title {
+  font-size: 16px;
+}
+
 .news-content {
   width:50%;
+  font-size: 14px;
 }
